ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node-app-ingress
spec:
  rules:
    - host: node-app.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: node-app-service
              servicePort: 3000
